[package]
authors = [
    "Sean Bowe <ewillbefull@gmail.com>",
    "Eirik Ogilvie-Wigley <eowigley@gmail.com>",
    "Jack Grigg <thestr4d@gmail.com>",
]
description = "Implementation of the Jubjub elliptic curve group"
license = "MIT/Apache-2.0"
name = "ironfish-jubjub"
repository = "https://github.com/iron-fish/jubjub"
version = "0.1.0"
edition = "2021"

[dependencies.lazy_static]
version = "1"

[dependencies.bitvec]
version = "1"
default-features = false

[dependencies.blst]
version = "0.3.10"

[dependencies.blstrs]
version = "0.6.0"
features = ["__private_bench"]

[dependencies.ff]
version = "0.12"
default-features = false

[dependencies.group]
version = "0.12"
default-features = false

[dependencies.rand_core]
version = "0.6"
default-features = false

[dependencies.subtle]
version = "^2.2.1"
default-features = false

[dev-dependencies]
criterion = "0.3"

[dev-dependencies.rand]
version = "0.8"

[dev-dependencies.rand_xorshift]
version = "0.3"
default-features = false

[features]
default = ["alloc", "bits"]
alloc = ["ff/alloc", "group/alloc"]
bits = ["ff/bits"]
multiply-many = ["alloc"]
stats = []

[[bench]]
name = "fq_bench"
harness = false

[[bench]]
name = "fr_bench"
harness = false

[[bench]]
name = "point_bench"
harness = false
